--- a/css/style.scss
+++ b/css/style.scss
@@ -483,6 +483,10 @@
         color: #5b5b5f;
         margin-top: 20px;
         transition: 0.3s ease-in-out;
+        a{
+          text-decoration: none;
+          color: #5b5b5f;
+        }
         i {
           margin-left: 10px;
         }
@@ -490,7 +494,9 @@
           background-color: #5b5b5f;
           border: 1px solid #5b5b5f;
           transition: 0.3s ease-in-out;
-          color: white;
+          a{
+            color: white;
+          }
         }
       }
     }
