--- a/css/_about.scss
+++ b/css/_about.scss
@@ -1,4 +1,4 @@
-#header {
+#headeer {
   width: 100%;
   padding: 20px 0px;
   #menu-bar {
@@ -261,27 +261,27 @@
   }
 }
 
-#news{
+#news {
   padding: 30px 0px;
-  h4{
-    font-family: 'Poppins',sans-serif;
+  h4 {
+    font-family: "Poppins", sans-serif;
     font-weight: bold;
     font-size: 46px;
     line-height: 69px;
     color: #000000;
   }
-  .box{
+  .box {
     padding-top: 20px;
-    h6{
-      font-family: 'Poppins';
+    h6 {
+      font-family: "Poppins";
       margin-top: 10px;
       font-weight: 600;
       font-size: 18px;
       line-height: 27px;
-      color: #2F2F2F;
+      color: #2f2f2f;
     }
-    p{
-      font-family: 'Poppins';
+    p {
+      font-family: "Poppins";
       font-weight: 400;
       font-size: 18px;
       line-height: 29px;
@@ -290,17 +290,63 @@
   }
 }
 
-#need{
+#need {
   background-color: #f5f5f55e;
-  .text{
+  .text {
     width: 50%;
     padding: 30px;
-    h4{
-      font-family: 'Poppins';
+    h4 {
+      font-family: "Poppins";
       font-weight: bold;
       font-size: 36px;
       line-height: 54px;
       color: #000000;
+    }
+    .box {
+      padding-top: 30px;
+      input {
+        outline: none;
+        border-bottom: 2px solid #c5c5c5;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        background-color: transparent;
+        padding: 10px;
+        width: 70%;
+        &::placeholder {
+          color: #c5c5c5;
+          font-weight: 600;
+          font-family: "Poppins", sans-serif;
+          font-size: 16px;
+        }
+      }
+      button {
+        padding: 12px 10px;
+        width: 200px;
+        border: 1px solid #5b5b5f;
+        border-radius: 4px;
+        background-color: transparent;
+        font-family: "Poppins";
+        font-size: 17px;
+        color: #5b5b5f;
+        margin-top: 20px;
+        transition: 0.3s ease-in-out;
+        a {
+          text-decoration: none;
+          color: #5b5b5f;
+        }
+        i {
+          margin-left: 10px;
+        }
+        &:hover {
+          background-color: #5b5b5f;
+          border: 1px solid #5b5b5f;
+          transition: 0.3s ease-in-out;
+          a {
+            color: white;
+          }
+        }
+      }
     }
   }
   .image {
@@ -349,4 +395,3 @@
   }
 }
 
-@import "_responsive.scss";
