--- a/css/_about.scss
+++ b/css/_about.scss
@@ -6,7 +6,7 @@
   }
   label {
     font-size: 20px;
-    color: #fff;
+    color: black;
     cursor: pointer;
     display: none;
   }
@@ -395,3 +395,4 @@
   }
 }
 
+@import "_aboutr.scss";
