--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,17 @@
   transition: 0.3s ease-in-out;
   cursor: pointer;
 }
+#specialfurniture .text button a {
+  text-decoration: none;
+  color: black;
+}
 #specialfurniture .text button:hover {
   background-color: #5b5b5f;
   border: 1px solid #5b5b5f;
+  color: white;
+  transition: 0.3s ease-in-out;
+}
+#specialfurniture .text button:hover a {
   color: white;
   transition: 0.3s ease-in-out;
 }
@@ -306,9 +314,17 @@
   transition: 0.3s ease-in-out;
   cursor: pointer;
 }
+#about .left button a {
+  text-decoration: none;
+  color: black;
+}
 #about .left button:hover {
   background-color: #5b5b5f;
   border: 1px solid #5b5b5f;
+  color: white;
+  transition: 0.3s ease-in-out;
+}
+#about .left button:hover a {
   color: white;
   transition: 0.3s ease-in-out;
 }
@@ -1298,6 +1314,201 @@
     margin-top: 10px;
   }
 }
+#headergallery {
+  width: 100%;
+  padding: 20px 0px;
+}
+#headergallery #menu-bar {
+  display: none;
+}
+#headergallery label {
+  font-size: 20px;
+  color: black;
+  cursor: pointer;
+  display: none;
+}
+#headergallery .image a {
+  font-family: "Hind";
+  font-weight: 400;
+  font-size: 16px;
+  color: #5b6672;
+  text-decoration: none;
+  flex-direction: column;
+}
+#headergallery .navbar ul {
+  list-style: none;
+}
+#headergallery .navbar ul li {
+  position: relative;
+  float: left;
+}
+#headergallery .navbar ul li a {
+  text-decoration: none;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  color: black;
+  margin-left: 20px;
+}
+#headergallery .navbar ul li:hover ul {
+  display: initial;
+}
+#headergallery .navbar ul li:hover i {
+  transform: rotate(180deg);
+  transition: 2s ease;
+}
+#headergallery .navbar ul li ul {
+  position: absolute;
+  left: 0;
+  width: 200px;
+  background-color: #1e1e1e;
+  display: none;
+}
+#headergallery .navbar ul li ul li {
+  width: 100%;
+}
+#headergallery .right {
+  margin-top: -20px;
+}
+#headergallery .right ul {
+  list-style: none;
+}
+#headergallery .right ul li {
+  position: relative;
+  float: left;
+}
+#headergallery .right ul li a {
+  font-size: 20px;
+  padding: 0px;
+  color: black;
+  display: block;
+  cursor: pointer;
+  text-decoration: none;
+}
+#headergallery .right ul li:hover ul {
+  display: initial;
+}
+#headergallery .right ul li:hover i {
+  transform: rotate(180deg);
+  transition: 2s ease;
+}
+#headergallery .right ul li ul {
+  position: absolute;
+  left: 0;
+  display: none;
+}
+#headergallery .right ul li ul li {
+  width: 100%;
+}
+#headergallery .right ul li ul li a {
+  margin-left: -20px;
+}
+
+#wrapper #search-container {
+  text-align: center;
+}
+#wrapper #search-container input {
+  width: 400px;
+  height: 52px;
+  border: none;
+  outline: none;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08);
+  border-radius: 8px;
+  padding-left: 20px;
+}
+#wrapper #search-container input::-moz-placeholder {
+  font-family: "Poppins", sans-serif;
+}
+#wrapper #search-container input::placeholder {
+  font-family: "Poppins", sans-serif;
+}
+#wrapper #search-container i {
+  background-color: #363F50;
+  width: 79px;
+  border-radius: 8px;
+  padding: 18px;
+  color: white;
+}
+#wrapper #buttons {
+  text-align: center;
+  margin-top: 20px;
+}
+#wrapper #buttons .button-value {
+  border: 2px solid #353E4F;
+  padding: 1em 2.2em;
+  border-radius: 3em;
+  background-color: transparent;
+  color: #353E4F;
+  cursor: pointer;
+}
+#wrapper #buttons .active {
+  background-color: #353E4F;
+  color: white;
+}
+#wrapper #products {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-column-gap: 1.5em;
+  padding: 2em 0;
+}
+#wrapper #products .card {
+  background-color: white;
+  max-width: 100%;
+  margin-top: 1em;
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: 1em 2em 2.5em rgba(1, 2, 68, 0.08);
+}
+#wrapper #products .card .image-container {
+  text-align: center;
+}
+#wrapper #products .card .image-container img {
+  max-width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  height: 15em;
+}
+#wrapper .hide {
+  display: none;
+}
+
+#footer {
+  background-color: #353e4f;
+  width: 100%;
+  padding: 30px 0px;
+}
+#footer .text {
+  color: white;
+}
+#footer .text h4 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+}
+#footer .text ul li {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 36px;
+  cursor: pointer;
+}
+#footer h6 {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+}
+#footer .icon i {
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  margin-left: 15px;
+}
+
 @media (max-width: 800px) {
   #header label {
     display: initial;
