--- a/css/style.scss
+++ b/css/style.scss
@@ -561,4 +561,5 @@
 @import "_about.scss";
 @import "_contact.scss";
 @import "_gallery.scss";
+@import "_catalog.scss";
 @import "_responsive.scss";
