--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -57,10 +57,8 @@
     .left {
       .top {
         h4 {
-          
           font-size: 30px;
           line-height: 30px;
-         
         }
       }
       .bottom {
@@ -74,6 +72,16 @@
         }
         
       }
+    }
+    .right{
+      img{
+        width: 100%;
+      }
+    }
+  }
+  #about {
+    .right {
+      display: none;
     }
   }
   #collection{
