--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,10 @@
   margin-left: -7px;
   cursor: pointer;
 }
+#collection .boxes .text button a {
+  text-decoration: none;
+  color: white;
+}
 #collection .boxes .text button:hover {
   transform: scale(1.1);
   transition: 0.3s ease-in-out;
@@ -1805,6 +1809,396 @@
     margin-top: 10px;
   }
 }
+#headerdetail {
+  width: 100%;
+  padding: 20px 0px;
+}
+#headerdetail #menu-bar {
+  display: none;
+}
+#headerdetail label {
+  font-size: 20px;
+  color: black;
+  cursor: pointer;
+  display: none;
+}
+#headerdetail .image a {
+  font-family: "Hind";
+  font-weight: 400;
+  font-size: 16px;
+  color: #5b6672;
+  text-decoration: none;
+  flex-direction: column;
+}
+#headerdetail .navbar ul {
+  list-style: none;
+}
+#headerdetail .navbar ul li {
+  position: relative;
+  float: left;
+}
+#headerdetail .navbar ul li a {
+  text-decoration: none;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  color: black;
+  margin-left: 20px;
+}
+#headerdetail .navbar ul li:hover ul {
+  display: initial;
+}
+#headerdetail .navbar ul li:hover i {
+  transform: rotate(180deg);
+  transition: 2s ease;
+}
+#headerdetail .navbar ul li ul {
+  position: absolute;
+  left: 0;
+  width: 200px;
+  background-color: #1e1e1e;
+  display: none;
+}
+#headerdetail .navbar ul li ul li {
+  width: 100%;
+}
+#headerdetail .right {
+  margin-top: -20px;
+}
+#headerdetail .right ul {
+  list-style: none;
+}
+#headerdetail .right ul li {
+  position: relative;
+  float: left;
+}
+#headerdetail .right ul li a {
+  font-size: 20px;
+  padding: 0px;
+  color: black;
+  display: block;
+  cursor: pointer;
+  text-decoration: none;
+}
+#headerdetail .right ul li:hover ul {
+  display: initial;
+}
+#headerdetail .right ul li:hover i {
+  transform: rotate(180deg);
+  transition: 2s ease;
+}
+#headerdetail .right ul li ul {
+  position: absolute;
+  left: 0;
+  display: none;
+}
+#headerdetail .right ul li ul li {
+  width: 100%;
+}
+#headerdetail .right ul li ul li a {
+  margin-left: -20px;
+}
+
+#detail {
+  padding: 20px 0px;
+}
+#detail .image {
+  background-color: #F5F5F5;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  padding: 124px 70px 124px 40px;
+}
+#detail .image img {
+  width: 508px;
+  height: 284px;
+}
+#detail .cassette {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  padding: 20px;
+}
+#detail .cassette h4 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 45px;
+  color: #000000;
+}
+#detail .cassette p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 27px;
+  color: #5F5F5F;
+}
+#detail .cassette .text h5 {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  color: #202020;
+}
+#detail .cassette .color {
+  margin-left: 20px;
+}
+#detail .cassette .color #blue {
+  background-color: #4863A0;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border: none;
+}
+#detail .cassette .color #orange {
+  background-color: #F88138;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border: none;
+}
+#detail .cassette .color #gray {
+  background-color: #555555;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border: none;
+}
+#detail .cassette .color #brown {
+  background-color: #E3A03A;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border: none;
+}
+#detail .cassette .color #pink {
+  background-color: #DA1467;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border: none;
+}
+#detail .cassette .color #black {
+  background-color: #000000;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border: none;
+}
+#detail .cassette .color #grey {
+  background-color: #C6C6C6;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border: none;
+}
+#detail .cassette .color #green {
+  background-color: #ADD19E;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border: none;
+}
+#detail .cassette h3 {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #202020;
+  margin-top: 20px;
+}
+
+#elastic {
+  background-color: #363F50;
+  width: 100%;
+  margin-top: 20px;
+}
+#elastic .image {
+  padding: 60px;
+  position: relative;
+}
+#elastic .image .plus1 {
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  padding: 10px;
+  position: absolute;
+  left: 27%;
+  top: 50%;
+  cursor: pointer;
+}
+#elastic .tree {
+  background: linear-gradient(270deg, #363F50 25%, #363F50 100%);
+  opacity: 0.42;
+  box-shadow: 0px 4px 54px rgba(0, 0, 0, 0.54);
+  width: 100%;
+  padding: 92px 50px;
+  position: relative;
+}
+#elastic .tree .textt {
+  padding-top: 70px;
+}
+#elastic .tree .textt .h4 {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+#elastic .tree .textt .p {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+#elastic .tree .plus2 {
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  padding: 10px;
+  position: absolute;
+  right: 95.5%;
+  top: 35%;
+  cursor: pointer;
+}
+#elastic .tree .plus3 {
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  padding: 10px;
+  position: absolute;
+  right: 95.5%;
+  top: 50%;
+  cursor: pointer;
+}
+
+#relatedproduct {
+  padding: 30px 0px;
+}
+#relatedproduct .owl-carousel .owl-dot,
+#relatedproduct .owl-carousel .owl-nav .owl-next,
+#relatedproduct .owl-carousel .owl-nav .owl-prev {
+  display: none;
+}
+#relatedproduct .custome_slide.owl-carousel .owl-item {
+  transform: scale(0.7);
+  transition: all 0.5s;
+}
+#relatedproduct h4 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 40px;
+  color: #000000;
+}
+#relatedproduct .box {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background: #f9fcff;
+  width: 360px;
+  height: 360px;
+  padding: 2rem;
+}
+#relatedproduct .box img {
+  width: 100%;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+#relatedproduct .box p {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 25px;
+  margin-top: -20px;
+  color: #8f8f8f;
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+}
+#relatedproduct .box:hover img {
+  transform: scale(1.2);
+}
+#relatedproduct .box:hover p {
+  opacity: 1;
+}
+
+#footer {
+  background-color: #353e4f;
+  width: 100%;
+  padding: 30px 0px;
+}
+#footer .text {
+  color: white;
+}
+#footer .text h4 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+}
+#footer .text ul li {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 36px;
+  cursor: pointer;
+}
+#footer h6 {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+}
+#footer .icon i {
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  margin-left: 15px;
+}
+
+@media (max-width: 800px) {
+  #headerdetail label {
+    display: initial;
+  }
+  #headerdetail label i {
+    font-size: 30px;
+    margin-top: 30px;
+  }
+  #headerdetail .navbar {
+    position: absolute;
+    top: 25%;
+    left: 0;
+    right: 0;
+    background-color: rgba(2, 22, 55, 0.64);
+    display: none;
+    z-index: 1111111;
+  }
+  #headerdetail .navbar ul {
+    display: flex;
+    flex-direction: column;
+  }
+  #headerdetail .navbar ul li {
+    width: 100%;
+    padding: 20px;
+  }
+  #headerdetail .navbar ul li ul {
+    width: 100%;
+    position: relative;
+  }
+  #menu-bar:checked ~ .navbar {
+    display: initial;
+  }
+  #headerdetail img {
+    width: 200px;
+  }
+  .right {
+    display: block;
+  }
+  #detail .image {
+    padding: 0px 0px 0px 0px;
+  }
+  #detail .image img {
+    width: 100%;
+  }
+  #elastic {
+    display: none;
+  }
+  #footer .text {
+    margin-top: 10px;
+  }
+}
 @media (max-width: 800px) {
   #header label {
     display: initial;
@@ -1871,6 +2265,12 @@
   }
   #statistics .left .bottom .box .boxes {
     margin-left: 0px;
+  }
+  #statistics .right img {
+    width: 100%;
+  }
+  #about .right {
+    display: none;
   }
   #collection .boxes {
     margin-top: 10px;
