--- a/css/_contactr.scss
+++ b/css/_contactr.scss
@@ -13,7 +13,7 @@
         top: 25%;
         left: 0;
         right: 0;
-        background-color: rgba(2, 22, 55, 0.64);
+        background-color: black;
         display: none;
         z-index: 1111111;
 
