--- a/css/_galleryr.scss
+++ b/css/_galleryr.scss
@@ -14,7 +14,7 @@
         top: 25%;
         left: 0;
         right: 0;
-        background-color: rgba(2, 22, 55, 0.64);
+        background-color: black;
         display: none;
         z-index: 1111111;
 
@@ -22,6 +22,11 @@
         ul {
             display: flex;
             flex-direction: column;
+            li{
+                a{
+                    color: white;
+                }
+            }
         }
     }
 
