--- a/css/style.css
+++ b/css/style.css
@@ -926,13 +926,16 @@
     top: 25%;
     left: 0;
     right: 0;
-    background-color: rgba(2, 22, 55, 0.64);
+    background-color: black;
     display: none;
     z-index: 1111111;
   }
   #headeer .navbar ul {
     display: flex;
     flex-direction: column;
+  }
+  #headeer .navbar ul li a {
+    color: white;
   }
   #headeer .navbar ul li {
     width: 100%;
@@ -1274,7 +1277,7 @@
     top: 25%;
     left: 0;
     right: 0;
-    background-color: rgba(2, 22, 55, 0.64);
+    background-color: black;
     display: none;
     z-index: 1111111;
   }
@@ -1526,13 +1529,16 @@
     top: 25%;
     left: 0;
     right: 0;
-    background-color: rgba(2, 22, 55, 0.64);
+    background-color: black;
     display: none;
     z-index: 1111111;
   }
   #headergallery .navbar ul {
     display: flex;
     flex-direction: column;
+  }
+  #headergallery .navbar ul li a {
+    color: white;
   }
   #headergallery .navbar ul li {
     width: 100%;
@@ -1766,13 +1772,16 @@
     top: 25%;
     left: 0;
     right: 0;
-    background-color: rgba(2, 22, 55, 0.64);
+    background-color: black;
     display: none;
     z-index: 1111111;
   }
   #headercatalog .navbar ul {
     display: flex;
     flex-direction: column;
+  }
+  #headercatalog .navbar ul li a {
+    color: white;
   }
   #headercatalog .navbar ul li {
     width: 100%;
@@ -2161,13 +2170,16 @@
     top: 25%;
     left: 0;
     right: 0;
-    background-color: rgba(2, 22, 55, 0.64);
+    background-color: black;
     display: none;
     z-index: 1111111;
   }
   #headerdetail .navbar ul {
     display: flex;
     flex-direction: column;
+  }
+  #headerdetail .navbar ul li a {
+    color: white;
   }
   #headerdetail .navbar ul li {
     width: 100%;
@@ -2212,7 +2224,7 @@
     top: 25%;
     left: 0;
     right: 0;
-    background-color: rgba(2, 22, 55, 0.64);
+    background-color: black;
     display: none;
     z-index: 1111111;
   }
@@ -2247,7 +2259,7 @@
     width: 104px;
   }
   #specialfurniture img.img3 {
-    width: 130px;
+    width: 120px;
   }
   #statistics {
     padding: 30px 0px;
@@ -2274,7 +2286,7 @@
   }
   #collection .boxes {
     margin-top: 10px;
-    width: 360px;
+    width: 100%;
   }
   #reviews .box {
     margin-top: 10px;
